[ux] fix for header and members on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -974,3 +974,40 @@ body.member, body.poll {
 #subscriptions_table tbody tr td {
   text-align: center;
 }
+
+@media only screen and (max-width: 767px) {
+  
+  /* margin fix for long names on small screens */
+
+  figure {
+    margin: 4px -2px 40px;
+  }
+
+  /* header element changes to prevent stacking */
+
+  header .logo {
+    margin-bottom: 0;
+  }
+
+  .primary-valprop {
+    margin: 0 50px 15px 0;
+  }
+
+  .primary-valprop h1 {
+    margin-top: 0;
+  }
+
+  .primary-valprop p {
+    margin-bottom: 0;
+  }
+
+  .twitter-share-button {
+    margin: 16px 0;
+  }
+
+  header {
+    height: 450px;
+    background-position: 0 100%;
+  }
+
+}
